# josh-engine

./: .gitignore  .gitmodules  Brewfile  CMakeLists.txt  LICENSE  README.md  conan_vk.txt  emscripten-run  emscripten-setup  je_shell.html  shaderconvert.py
.github/workflows/: ci.yml  cmake-macos-metal.yml  cmake-macos-opengl.yml  cmake-macos-vulkan.yml  cmake-metal.yml  cmake-opengl.yml  cmake-ubuntu-vulkan.yml  cmake-ubuntu.yml  cmake-vulkan.yml  cmake-windows-vulkan.yml
engineRuntime/: test.rend
engineRuntime/shaders/: blinn-phong_color.glsl  blinn-phong_textured.glsl  font_texture.glsl  frag_button.glsl  frag_character.glsl  frag_col.glsl  frag_tex.glsl  frag_tex_transparent.glsl  frag_textured_ui.glsl  fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  temp_triangle_frag.glsl  temp_triangle_frag.wgsl  temp_triangle_vert.glsl  temp_triangle_vert.wgsl  toon_normals.glsl  toonshade_color.glsl  vertex.glsl  vertex2d.glsl  vertex2d_font.glsl  vertex3d.glsl
engineRuntime/shaders/metal/: texture.metal  vertex2d.metal  vertex3d.metal
engineRuntime/shaders/vulkan/: tutorial.vert
includes/stb/: stb_vorbis.c
src/: gamephysicslib.cpp  gamephysicslib.h  gameuiutil.cpp  gameuiutil.h  main.cpp  test.cpp  test.h
src/engine/: engine.cpp  engine.h  engineconfig.h  enginedebug.cpp  enginedebug.h
src/engine/debug/: debugutil.cpp  debugutil.h
src/engine/gfx/: enginegfx.cpp  enginegfx.h  modelutil.cpp  modelutil.h  renderable.cpp  renderable.h  shaderutil.h
src/engine/gfx/imgui/: imgui.cpp  imgui_demo.cpp  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_vulkan.cpp
src/engine/gfx/mtl/: gfx_mtl.h  gfx_mtl.mm  mtl_impl.cpp
src/engine/gfx/opengl/: gfx_gl33.cpp  gfx_gl33.h  gfx_gl41.cpp  gfx_gl41.h  shaderutil_gl33.h
src/engine/gfx/spirv/: spirv-helper.h
src/engine/gfx/vk/: gfx_vk.cpp  gfx_vk.h  spirv-helper.h
src/engine/gfx/wgpu/: gfx_wgpu.cpp  gfx_wgpu.h
src/engine/jbd/: bundleutil.cpp  bundleutil.h
src/engine/sound/: audioutil.cpp  audioutil.h  engineaudio.cpp  engineaudio.h
src/engine/ui/imgui/: imgui.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h  imgui_internal.h
src/engine/ui/je/: uiutil.cpp  uiutil.h
src/stb/: stb_image.h
